# zerosemester

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: auth.rs  main.rs  notion_api.rs  paperless_api.rs
